tests/jastadd/negative/type_errors/L2/4_TypeCheckingForStmt6.ob
MODULE TestModule;
    VAR j : INTEGER;
BEGIN
    FOR j := 1 TO 2 BY j DO
    END
END TestModule.
